--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -8,6 +8,7 @@
         <td>#</td>
         <td>標題</td>
         <td>敘述</td>
+        <td>Creator </td>
       </tr>
     </thead>
     <tbody>
@@ -17,6 +18,8 @@
           <td>
              <%= link_to(group.title, group_path(group)) %>
           </td>
+          <td><%= group.description %></td>
+          <td> <%= group.user.email %> </td>
           <td>
             <%= link_to("修改", edit_group_path(group), class: "btn btn-sm btn-default") %>
             <%= link_to("刪除", group_path(group), class: "btn btn-sm btn-default" , method: :delete, data: { confirm: "確定要刪除嗎?" } ) %>
