--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -17,6 +17,7 @@
           <td>
              <%= link_to(group.title, group_path(group)) %>
           </td>
+          <td><%= group.description %></td>
           <td>
             <%= link_to("修改", edit_group_path(group), class: "btn btn-sm btn-default") %>
             <%= link_to("刪除", group_path(group), class: "btn btn-sm btn-default" , method: :delete, data: { confirm: "確定要刪除嗎?" } ) %>
