--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -21,8 +21,10 @@
           <td><%= group.description %></td>
           <td> <%= group.user.email %> </td>
           <td>
+           <% if current_user && current_user == group.user %>
             <%= link_to("修改", edit_group_path(group), class: "btn btn-sm btn-default") %>
             <%= link_to("刪除", group_path(group), class: "btn btn-sm btn-default" , method: :delete, data: { confirm: "確定要刪除嗎?" } ) %>
+            <% end %>
           </td>
         </tr>
       <% end %>
