--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -7,22 +7,25 @@
   </div>
   <h2><%= @group.title%></h2>
   <p><%= @group.description%></p>
-  <table>
+  <table class="table">
     <thead>
-      <tr>
-        <th>文章內容</th>
-        <th>發表者</th>
-        <th>發表時間</th>
+     <tr>
+        <th>文章内容</th>
+        <th>发表者</th>
+        <th>发表时间</th>
       </tr>
     </thead>
     <tbody>
       <% @posts.each do |post| %>
         <tr>
-          <td><%= post.content%></td>
-          <td><%= post.user.email%></td>
-          <td><%= post.created_at%></td>
+          <td><%= post.content %></td>
+          <td><%= post.user.email %></td>
+          <td><%= post.created_at %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
+  <div class="text-center">
+      <%= will_paginate @posts %>
+    </div>
 </div>
