--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -12,22 +12,7 @@
       </tr>
     </thead>
     <tbody>
-      <% @groups.each do |group| %>
-        <tr>
-          <td>#</td>
-          <td>
-             <%= link_to(group.title, group_path(group)) %>
-          </td>
-          <td><%= ender_group_description(group.description)  %></td>
-          <td> <%= group.user.email %> </td>
-          <td>
-           <% if current_user && current_user == group.user %>
-            <%= link_to("修改", edit_group_path(group), class: "btn btn-sm btn-default") %>
-            <%= link_to("刪除", group_path(group), class: "btn btn-sm btn-default" , method: :delete, data: { confirm: "確定要刪除嗎?" } ) %>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
+      <%= render :partial => "group_item", :collection => @groups, :as => :group %>
     </tbody>
   </table>
 </div>
